<resources>
    <string name="app_name">FAST Chat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Person Name</string>
    <string name="nav_header_subtitle">l191234@lhr.nu.edu.pk</string>
    <string name="nav_header_desc">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="chat">Chat</string>
    <string name="notif">Announcements</string>
    <string name="courses">Courses Information</string>
    <string name="past">Past Papers</string>
    <string name="semester">Semester Information</string>

    <string name="a1">MoU Signed with GADITEK to Develop Career and Learning Opportunities for Students</string>
    <string name="a2">Call For Faculty Research Support Grant For Fall- 2022 Is Open Now</string>
    <string name="a3">AWS Automated Reasoning Call For Proposals - Spring 2021</string>
    <string name="a4">AWS Automated Reasoning Call For Proposals - Spring 2021</string>
    <string name="a5">HEC - NATIONAL RESEARCH PROGRAM FOR UNIVERSITIES</string>
    <string name="a6">Aalgorithm (Namely, PFPPipeline) Developed By Dr. Hafeez Ur Rehman Of Peshawar Campus</string>
</resources>