<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_notif"
            android:icon="@drawable/ic_baseline_circle_notifications_24"
            android:title="@string/notif" />
        <item
            android:id="@+id/nav_past"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/past" />
    </group>
    <item android:title="Information">
        <menu>
            <item
                android:id="@+id/nav_courses"
                android:icon="@drawable/ic_baseline_calendar_month_24"
                android:title="@string/courses" />
            <item
                android:id="@+id/nav_semester"
                android:icon="@drawable/ic_baseline_library_books_24"
                android:title="@string/semester" />
        </menu>
    </item>
</menu>